# mathlib

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs
tests/: trig_coerce.rs
