[package]
name = "mathlib"
version = "0.1.0"
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A math library for Rust"
repository = "https://github.com/ohsayan/mathlib"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
